Blocked header position, fixed title position on ios devices and some additional visual effects added

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,3 +12,6 @@
 //     font-size: 10px !important;
 //   }
 // }
+main {
+  z-index: 1;
+}
