--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -3,6 +3,7 @@ footer {
   position: fixed;
   bottom: 0;
   left: 0;
+  z-index: 2;
   a {
     color: #18909b;
   }
@@ -14,6 +15,8 @@ footer {
     width: 1920px;
     left: -23rem;
     height: 18rem;
+    transition: height 2s, left 3s;
+    filter: drop-shadow(0px 1px 5px rgba(0,0,0,0.5));
   }
 
   .footer-container {
@@ -69,8 +72,13 @@ footer {
 
 @media screen and (max-width: 575px) and (min-width: 376px) {
   svg#clouds {
-    left: -25rem !important;
-    height: 17rem !important;
+    left: -30rem !important;
+    height: 15rem !important;
+  }
+
+  .footer-container {
+    padding-bottom: 4px !important;
+    padding-left: 4px !important;
   }
 }
 
