--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,4 +1,10 @@
 header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  filter: drop-shadow(0px 4px 5px rgba(0,0,0,0.5));
   .toolbar-background {
     width: 101%;
     position: absolute;
@@ -16,6 +22,7 @@ header {
     position: relative;
     top: 4.5rem;
     right: 19px;
+    transition: all 3s;
   }
 
   .toolbar-container {
@@ -37,10 +44,10 @@ header {
       text-decoration: none;
       position: absolute;
       top: 2rem;
-      left: 0;
-      right: 0;
+      text-align: center;
       color: white !important;
       display: inline-table;
+      width: 100%;
       margin: auto;
       font-size: 3rem;
 
