--- a/src/app/pages/home/home.page.component.scss
+++ b/src/app/pages/home/home.page.component.scss
@@ -26,10 +26,6 @@
   .content {
     margin-top: 10.2rem;
   }
-
-  .content .card-grid:last-child {
-    margin-bottom: 4rem;
-  }
 }
 
 @media screen and (min-width: 500px) and (max-width: 980px) and (orientation: landscape) {
